--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Kirill Bondar",
   "license": "MIT",
   "devDependencies": {
+    "autoprefixer": "^6.7.1",
     "babel-core": "^6.4.5",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.1",
@@ -16,11 +17,15 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
+    "css-loader": "^0.26.1",
     "eslint": "^3.14.1",
     "eslint-loader": "^1.6.1",
     "eslint-plugin-react": "^6.9.0",
     "express": "^4.13.4",
+    "postcss-loader": "^1.2.2",
+    "precss": "^1.4.0",
     "react-hot-loader": "^1.3.1",
+    "style-loader": "^0.13.1",
     "webpack": "^1.12.12",
     "webpack-dev-middleware": "^1.5.1",
     "webpack-hot-middleware": "^2.6.4"
@@ -30,7 +35,9 @@
     "babel-runtime": "^6.3.19",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
-    "react-redux": "^4.0.6",
-    "redux": "^3.0.6"
+    "react-redux": "^4.4.6",
+    "redux": "^3.6.0",
+    "redux-logger": "^2.7.4",
+    "redux-thunk": "^2.2.0"
   }
 }
